minor overflow fix (Safari)

--- a/site/coral.ru/css/index.less
+++ b/site/coral.ru/css/index.less
@@ -21,10 +21,15 @@ body {
 header.site-header {
 	position: relative;
 	z-index: 11;
+	#ny2023-wrap {
+		.abs100x100;
+		overflow: hidden;
+		z-index: -1;
+	}
 	#ny2023-decor {
 		.proportional(2600/106);
 		position: absolute;
-		z-index: -1;
+		//z-index: -1;
 		width: 2600px;
 		top: auto;
 		bottom: 0;
